@@ -397,6 +397,10 @@ LUCENE-1458, LUCENE-2111: Flexible Indexing
 
   The scorePayload method now takes a BytesRef. It is never null.
 
+* LUCENE-3722: Similarity methods and collection/term statistics now take
+  long instead of int (to enable distributed scoring of > 2B docs). 
+  For example, in TFIDFSimilarity idf(int, int) is now idf(long, long). 
+
 * LUCENE-3559: The methods "docFreq" and "maxDoc" on IndexSearcher were removed,
   as these are no longer used by the scoring system.
 
